apps/immich/immich-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: immich-postgres.fruitiex.org
spec:
  type: LoadBalancer
  selector:
    app: immich-postgres
  ports:
    - name: psql
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: immich-postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0@sha256:f36625fffae9611b0e6e28cc1a9bb573d20a9d3cc5e62ab0ff1a19874e34e1f4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: immich-postgres-data
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: immich-postgres-data
          persistentVolumeClaim:
            claimName: immich-postgres-data
